--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "mern-infrastructure",
+  "name": "mern-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "puppeteer": "^21.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
