--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "jsrsasign": "^10.8.6",
     "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "os-browserify": "^0.3.0",
@@ -28,7 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node --watch server.js"
+    "server": "node --watch server.js",
+    "start-dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   },
   "proxy": "http://localhost:3001"
 }
